--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.custom-bg-image {
+  background-image: url(../../public/images/herobg.jpg);
+  background-color: rgba(255, 255, 255, 0.2);
+  background-blend-mode: overlay;
+}
